--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="larntech">larntech</string>
     <string name="beername">BeerName</string>
     <string name="beer_name">beer name</string>
-    <string name="beer_list">Beer list</string>
+    <string name="beer_list">beer of the world</string>
 </resources>
