не рабочая версия (поиск, база данных, окно выбора по букве)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="durability">Выносливость</string>
     <string name="power">Мощь</string>
     <string name="combat">Боеспособность</string>
+    <string name="chose_symbol">Chose first symbol of hero name</string>
+    <string name="list_search">search</string>
 </resources>
